Refactored (#18).